--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@100xdevs/common-app": "^1.0.3",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
